--- a/404.html
+++ b/404.html
@@ -13,6 +13,6 @@ permalink: /404.html
   var $current_path = window.location.pathname;
 
   if ($current_path.match(/^\/api\/(.*?)\/aik099\/(.*)/)) {
-    window.location.replace('/api/' + RegExp.$1 + '/QATools/' + RegExp.$2);
+    window.location.replace('http://api.qa-tools.io/' + RegExp.$1 + '/QATools/' + RegExp.$2);
   }
 </script>
