--- a/support.html
+++ b/support.html
@@ -5,19 +5,12 @@ title:      Support
 
 Feel free to ask any questions about the library here.<br><br>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-   var disqus_shortname = 'qa-tools';
-   var disqus_identifier = 'eeCtJmxj9vygXaYAwc9S';
-   var disqus_url = 'http://www.qa-tools.io/support/';
+<div style="float: left; margin-right: 8px;">
+  <a href="https://github.com/qa-tools/qa-tools/issues/new">Report an issue</a> or
+</div>
 
-   /* * * DON'T EDIT BELOW THIS LINE * * */
-   (function() {
-       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-       dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-   })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+<div style="float: left; margin-top: 4px;">
+  <a href="https://gitter.im/qa-tools/qa-tools?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge">
+    <img src="https://badges.gitter.im/Join%20Chat.svg" width="150" height="18" alt="Join the chat at https://gitter.im/qa-tools/qa-tools"/>
+  </a>
+</div>
